# suptool

./: .editorconfig  .gitignore  App.xaml  Cargo.toml  ClearTool-WinUI.csproj  ClearTool-WinUI.sln  README.fr.md  README.md  app.manifest  build.rs  deno.json  package.json  vite.config.ts
.github/workflows/: deno.yml  rust.yml
Properties/: launchSettings.json
Properties/PublishProfiles/: win-arm64.pubxml
lib/: .gitignore  SearchFiles.sln  SearchFiles.vcxproj  dllmain.cpp
locales/: Resources.fr.resx  Resources.resx
src/: App.tsx  App.xaml  App.xaml.cs  app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: file_search.rs  lib.rs  main.rs
src/cleartool/: mod.rs
src/components/: FileSearch.tsx
src/everything/: mod.rs
src/everything/index/: bitmap.rs  block.rs  entry.rs  header.rs  mod.rs
src/everything/path/: compress.rs  mod.rs  table.rs
src/everything/search/: mod.rs  query.rs  scorer.rs
src/models/: SearchResultItem.cs
src/pages/: about.rs  cleartool.rs  everysup.rs  home.rs  mod.rs  settings.rs
src/pages/features/: mod.rs  searcher.rs
src/updater/: mod.rs
src/utils/: String.xaml.cs  format.rs  get_drive.rs  mod.rs
src/views/: MainWindow.xaml  MainWindow.xaml.cs  TreeView.xaml.cs
src/views/pages/: ClearCachePage.xaml  ClearCachePage.xaml.cs  HomePage.xaml  HomePage.xaml.cs  SearchPage.xaml  SearchPage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs
src/widgets/: mod.rs  notifications.rs
ui/: logic.slint  main.slint
ui/common/: types.slint
ui/dialogs/: new_group.slint
ui/pages/: about.slint  cleartool.slint  everysup.slint  home.slint  settings.slint
ui/widgets/: common.slint  notifications.slint  pop_hover.slint
ui/windows/: mod.slint
