[package]
name = "suptool"
version = "0.1.0"
edition = "2021"

[package.metadata.bundle]
name = "suptool"
identifier = "com.suptool.app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.8.0"
once_cell = "1.18.0"
crossbeam = "0.8.1"
parking_lot = "0.12.1"
notify = "6.0.1"
serde = "1.0.190"
serde_json = "1.0.100"
chrono = { version = "0.4.20-rc.1" }
walkdir = "2.4"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
] }
lru = "0.12.1"
ahash = "0.8.11"
bit-vec = "0.6"
memmap2 = "0.5.10"
regex = "1.11.0"
bitflags = "2.4.0"
dirs = "5.0.1"
rayon = "1.10.0"
is_elevated = "0.1.2"
num_cpus = "1.16.0"
[build-dependencies]
slint-build = "1.8.0"