[package]
name = "suptool"
version = "0.0.1"
edition = "2021"

[package.metadata.bundle]
name = "suptool"
identifier = "com.suptool.app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.8.0"
dashmap = "6.0.0-rc.1"
parking_lot = "0.12.1"
serde = { version = "1.0.190", features = ["derive"] }
chrono = { version = "0.4.20-rc.1" }
ignore = "0.4"
rayon = "1.10.0"
is_elevated = "0.1.2"
num_cpus = "1.16.0"
once_cell = "1.19"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
semver = "1.0"
ureq = { version = "2.8.0", features = ["json"] }
crossbeam = "0.8.1"
rfd = "0.11"
[build-dependencies]
slint-build = "1.8.0"
winres = "0.1.1"
